--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -21,11 +21,15 @@ jobs:
 
     steps:
     - uses: actions/checkout@v3
+    - name: Install pnpm
+      uses: pnpm/action-setup@v4
+      with:
+        version: 9
     - name: Use Node.js ${{ matrix.node-version }}
       uses: actions/setup-node@v3
       with:
         node-version: ${{ matrix.node-version }}
-        cache: 'npm'
-    - run: npm install
-    - run: npm run build --if-present
-    - run: npm test
+        cache: 'pnpm'
+    - run: pnpm install
+    - run: pnpm run build --if-present
+    - run: pnpm test
